tests/NormalTests/paczka2/big_fuzzy/10807175.err
Error in line 13: 920U S90 74,2
Error in line 21: 7XHVfU2BTkF S1&1 43,&
Error in line 24: 920U A23 78,56
Error in line 14: 7XHVfU2BTkF S181 39,8
Error in line 33: 7XHVfU2BTkF S181 8,5
Error in line 32: 19l S11 14,1
Error in line 20: RAqAbL S90 127,4
Error in line 41: S181 S90 31,0
Error in line 43: 7XHVfU2BTkF A23 4,0
Error in line 53: 7XHVfU2BTkF S548 73,5
Error in line 49: oU8GVM5Qsr S548 2,3
Error in line 44: 19l S181 27,5
Error in line 56: oU8GVM5Qsr S90 71,6
Error in line 50: S181 A23 35,7
Error in line 65: S181 S90 66,8
Error in line 64: 7XHVfU2BTkF S181 98,2
Error in line 78: 7XHVfU2BTkF S548 67,1
Error in line 77: oU8GVM5Qsr S90 25,2
Error in line 92: S181 A23 8,2
Error in line 94: 7XHVfU2BTkF S90 28,5
Error in line 91: oU8GVM5Qsr S548 268,0
Error in line 109: oU8GVM5Qsr A23 34,73
Error in line 110: vi45NkCa S548 2,8
Error in line 107: S181 S90 74,3
Error in line 112: vi45NkCa S181 14,7
Error in line 118: RAqAbL S90 87,7
Error in line 117: vi45NkCa S90 45,2
Error in line 124: vi45NkCa S181 53,2
Error in line 88: 920U S90 174,8
Error in line 131: 920U S181 69,6
Error in line 132: 19l S181 63,2
Error in line 133: S181 A23 76,2
Error in line 140: oU8GVM5Qsr A23 9,3
Error in line 143: 920U A23 97,6
Error in line 141: oU8GVM5Qsr S90 12,7
Error in line 155: S181 S548 36,6
Error in line 162: S181 S90 35,3
Error in line 170: S181 S181 90,3
Error in line 179: S181 A23 9,3
Error in line 176: 920U S181 303,4
Error in line 167: vi45NkCa S90 17,7
Error in line 169: 7XHVfU2BTkF S90 382,0
Error in line 187: 7XHVfU2BTkF S181 67,7
Error in line 181: S181 S181 9,3
Error in line 192: S181 A23 23,6
Error in line 191: 7XHVfU2BTkF A23 39,6
Error in line 190: 920U S90 10,1
Error in line 203: oU8G#M5Qsr A23 75,1
Error in line 210: vi45NkCa S548 67,8
Error in line 200: oU8GVM5Qsr A23 31,7
Error in line 212: 920U S181 0,0
Error in line 213: vi45NkCa S181 18,7
Error in line 227: vi45NkCa A23 61,6
Error in line 223: 920U A23 47,0
Error in line 229: oU8GVM5Qsr A23 25,8
Error in line 232: oU8GVM5Qsr S548 22,8
Error in line 239: RAqAbL S181 11,3
